# maternity_records

./: .gitignore  app.py  pyproject.toml  settings.py  utils.py  wsgi.py
models/: __init__.py  maternity.py  pregnancy.py  tables.py  users.py
src/: __init__.py
templates/: base.html  login.html  register.html  response.html  verify.html
templates/admin/: base.html  home.html
templates/client/: base.html  home.html
templates/clinical/: base.html  home.html
